Adjust OAS export subpath and add import attribute example to README

--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     ".": {
       "default": "./dist/api_types.ts"
     },
-    "./openapi.json": {
+    "./openapi": {
       "default": "./openapi/openapi.json"
-    },
-    "./openapi.yaml": {
-      "default": "./openapi/openapi.yaml"
     }
   },
   "repository": {
